# llm-agent

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose-langfuse.yaml  docker-compose.yaml  langfuse.env.sample  pyproject.toml
app/core/: config.py
app/tasks/: celery_main.py
app/workflows/graphs/websearch/: graph.py  local_model_client.py  model_map.py
app/workflows/graphs/websearch/components/: answer_generator.py  question_enhancer.py  question_rewriter.py  websearch_executor.py
app/workflows/graphs/websearch/tools/: duckduckgo_search_tool.py
config/grafana/: grafana.ini
docs/: cache.md  example.env  local_model_setup.md
